# Prog_1

./: README.md
Drill 12/: main  main.cpp
Drill 13/: CMakeLists.txt  main  main.cpp
Drill 15/Drill_15_1/: main  main.cpp
Drill 15/Drill_15_2/: main  main.cpp
Drill 16/: main  main.cpp
Drill 19/: CMakeLists.txt  main.cpp
Drill 20/: CMakeLists.txt  main  main.cpp
Drill 21/: Untitled.rtf  main  main.cpp  set  set.cpp  vector  vector.cpp
Drill 24/: CMakeLists.txt  main  main.cpp
Drill 27/: CMakeLists.txt  main.c
Drill14/: CMakeLists.txt  main.cpp
Első FLTK /GUI/: Graph.h  main
